Section5_Argo_CD_Application/02_demoapp_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demoapp
  name: demoapp-dep
  namespace: demoapp-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
      - image: thinknyx/demoapp:v1
        name: demoapp
