Section5_Argo_CD_Application/03_demoapp_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demoapp
  name: demoapp-svc
  namespace: demoapp-ns
spec:
  ports:
  - name: demoapp-ports
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demoapp
  type: ClusterIP
